--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -9,7 +9,7 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
   <meta charset="UTF-8">
-  <meta name="viewport" content="width-device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>
     {% block page_title %}
     {% endblock %}
