--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -49,7 +49,7 @@
                                   <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
                                 </svg>
 
-                                {{ patient.id }}
+                                {{ patient.id | zfill}}
                             </button>
                         </td>
                     </tr>
