--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -8,7 +8,7 @@
 <main class="flex-shrink-0 m-auto flex-grow-1 bg-dark" style="width: 100%;">
 
     <div class="pt-2 container px-4 text-light" id="icon-grid">
-        <h2 class="zd py-2 text-center" style="font-weight: 100; color: #EF539E;">{{ patient.first_name | proper_case}} {{ patient.last_name | proper_case}}</h2>
+        <h2 class="zd py-2 text-center">{{ patient.first_name | proper_case}} {{ patient.last_name | proper_case}}</h2>
     </div>
 
 
@@ -23,7 +23,7 @@
                 
                 <!-- Section with personal details for patient and partner -->
                 <div class="col-12 col-lg-6 text-light">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark" style="border-color: #EF539E;">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
                         <div class="d-flex flex-column h-100 p-4 text-shadow-1">
 
                             <!-- New content with slider card -->
@@ -102,7 +102,7 @@
 
                 <!-- Section with contact details -->
                 <div class="col-12 col-lg-6 text-light">
-                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark" style="border-color: #EF539E;">
+                    <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg bg-dark">
                         <div class="d-flex flex-column h-100 p-4 text-shadow-1">
 
                             <!-- New content with slider card -->
