--- a/fetusapp/templates/index.html
+++ b/fetusapp/templates/index.html
@@ -10,7 +10,7 @@ block content %}
           <div class="row row-cols-1 row-cols-lg-2 align-items-stretch g-4 py-4 text-bg-dark mt-1">
       
             <div class="col-12 col-lg-8 order-1 order-lg-1 text-light">
-              <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-color: #EF539E;">
+              <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg index-quote">
                 <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                   <h3 class="pt-0 mt-0 mb-4 lh-1" style="font-weight: 100;">{{ quote[0]['content']}}</h3>
                   <small class="ms-auto" style="font-style: italic">{{ quote[0]['author']}}</small>
@@ -19,7 +19,7 @@ block content %}
             </div>
        
             <div class="col-12 col-md-6 col-lg-4 order-lg-2">
-              <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" style="background-color: #F3E1D7;">
+              <div class="card card-cover h-100 overflow-hidden text-bg-dark rounded-4 shadow-lg" id="weather-bubble">
                 <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
                   <h3 class="pt-0 mt-0 mb-4 display-6 lh-1 fw-bold">
                     {{ weather['current']['temperature'] }}°C
@@ -35,22 +35,22 @@ block content %}
 
         <div class="zd pt-5 container px-4 text-light align-items-stretch" id="icon-grid">
           {% if calendar_events | length > 0 %}
-          <h2 class="pb-5 text-center" style="font-weight: 100; color: #EF539E;">There are {{ calendar_events | length }} scheduled appointments for today!</h2>
+          <h2 class="pb-5 text-center index-app" style="">There are {{ calendar_events | length }} scheduled appointments for today!</h2>
           <div id="calendar-controls" class="text-end">
-            <button type="button" class="btn btn-outline-secondary me-1">
+            <!-- <button type="button" class="btn btn-outline-secondary me-1">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-left" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M9.224 1.553a.5.5 0 0 1 .223.67L6.56 8l2.888 5.776a.5.5 0 1 1-.894.448l-3-6a.5.5 0 0 1 0-.448l3-6a.5.5 0 0 1 .67-.223"></path>
               </svg>
               <span class="visually-hidden">Previous</span>
-            </button>
+            </button> -->
 
             <p class="" style="display: inline; font-size: 1.2rem;">{{ calendar_events[0].vobject_instance.vevent.dtstart.value.strftime("%Y-%m-%d") }}</p>
-            <button type="button" class="btn btn-outline-secondary ms-1">
+            <!-- <button type="button" class="btn btn-outline-secondary ms-1">
               <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-compact-right" viewBox="0 0 16 16">
                 <path fill-rule="evenodd" d="M6.776 1.553a.5.5 0 0 1 .671.223l3 6a.5.5 0 0 1 0 .448l-3 6a.5.5 0 1 1-.894-.448L9.44 8 6.553 2.224a.5.5 0 0 1 .223-.671"></path>
               </svg>
               <span class="visually-hidden">Next</span>
-            </button>
+            </button> -->
           </div>
           <div class="flex-grow-1" style="overflow-x: auto;">
             <table class="table table-dark table-hover">
@@ -72,7 +72,7 @@ block content %}
                   <td>{{ vevent.dtstart.value.strftime("%H:%M") }} - {{ vevent.dtend.value.strftime("%H:%M") }}</td>
                   <td>
                     <div class="progress" role="progressbar" aria-label="Basic example" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="border-radius: 2rem; min-width: 2rem;">
-                      <div class="progress-bar" style="background-color: #EF539E; width: {{ (vevent.dtend.value - vevent.dtstart.value).total_seconds() / 36 }}%; border-radius-left: 2rem;"></div>
+                      <div class="progress-bar" style="width: {{ (vevent.dtend.value - vevent.dtstart.value).total_seconds() / 36 }}%; border-radius-left: 2rem;"></div>
                     </div>
                   </td>
                   <td>
@@ -114,7 +114,40 @@ block content %}
 
     {% else %}
     <main class="form-signin w-100 m-auto pt-5">
-      <img class="mb-4 mx-auto d-block" src="../static/_online_assets/logo.svg" alt="" width="200" height=auto>
+      <h2 class="mb-4 mx-auto d-block text-center">
+        <svg version="1.1"
+            xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:a="http://ns.adobe.com/AdobeSVGViewerExtensions/3.0/"
+            x="0px" y="0px" width="211px" height="80px" viewBox="-5.409 -3.532 124 47" enable-background="new -5.409 -3.532 124 47"
+            xml:space="preserve">
+          <defs>
+          </defs>
+          <path fill="#ffffff" d="M14.741,16.239V23.3h-4.55v4.604H0V14.603c0-2.596,0.445-4.811,1.336-6.648
+            c1.126-2.341,2.837-4.254,5.136-5.736c2.297-1.477,4.69-2.218,7.18-2.218l1.089,0.026v10.681c-0.236-0.018-0.409-0.028-0.518-0.028
+            c-1.29,0-2.284,0.427-2.982,1.28c-0.7,0.853-1.049,2.07-1.049,3.652v0.626H14.741z"/>
+          <path fill="#ffffff" d="M76.148,0.001h-10.18v2.616c3.383,0.175,6.771,0.291,10.18,0.373V0.001z"/>
+          <path fill="#ffffff" d="M90.179,0.001H79.99v3.073c3.396,0.063,6.795,0.11,10.189,0.168V0.001z"/>
+          <path fill="#ffffff" d="M79.99,15.338c0,1.543-0.635,2.316-1.906,2.316c-1.291,0-1.936-0.773-1.936-2.316V3.508
+            c-3.406-0.124-6.797-0.272-10.18-0.466V14.33c0,3.908,0.914,6.956,2.752,9.152c2.357,2.814,5.467,4.221,9.336,4.221
+            c3.395,0,6.268-1.213,8.609-3.639c2.342-2.424,3.514-5.391,3.514-8.915V3.956C86.785,3.848,83.386,3.75,79.99,3.64V15.338z"/>
+          <path fill="#ffffff" d="M110.058,0.001c-3.592,0-6.4,0.984-8.428,2.955c-0.188,0.184-0.348,0.366-0.518,0.549
+            c3.816,0.132,7.621,0.319,11.396,0.609V5.1c-4.006-0.333-8.043-0.568-12.094-0.754c-0.492,0.667-0.869,1.336-1.094,2.01
+            c-0.377,1.141-0.641,3.124-0.785,5.941c-0.111,1.732-0.521,2.942-1.23,3.633c-0.709,0.691-1.893,1.037-3.551,1.037h-0.469v10.938
+            h1.436c3.557,0,6.301-0.57,8.234-1.711c3.648-2.193,5.711-5.947,6.191-11.271c0.146-1.601,0.492-2.674,1.035-3.218
+            c0.545-0.543,1.543-0.816,3-0.816V0.001H110.058z"/>
+          <path fill="#ffffff" d="M56.73,1.964c0.666,0.062,1.333,0.114,2,0.169V0.001H48.542v13.303c0,2.6,0.446,4.815,1.334,6.649
+            c1.127,2.337,2.839,4.25,5.137,5.728c2.297,1.482,4.689,2.223,7.178,2.223l1.088-0.027V17.201c-0.232,0.018-0.406,0.026-0.516,0.026
+            c-1.289,0-2.285-0.426-2.982-1.279c-0.701-0.855-1.051-2.07-1.051-3.651v-0.627h4.549V4.604H58.73V2.541
+            c-0.922-0.075-1.843-0.152-2.762-0.238C54.454,2.16,55.589,1.858,56.73,1.964"/>
+          <path fill="currentColor" d="M30.104,13.675c0,0.657,0.118,1.377,0.354,2.154h15.448c0.073-0.869,0.109-1.506,0.109-1.907
+            c0-3.923-1.339-7.226-4.018-9.905C39.317,1.338,36.007,0,32.066,0c-4.032,0-7.434,1.371-10.204,4.112
+            c-2.77,2.745-4.154,6.105-4.154,10.083c0,3.999,1.371,7.344,4.114,10.051c2.055,2.029,4.471,3.295,7.25,3.805v3.592h-4.541v5.58
+            h4.541v4.711h5.58v-4.711h4.549v-5.58h-4.549v-3.588c2.272-0.426,4.391-1.396,6.352-2.938l-5.805-6.971
+            c-0.943,1.017-1.925,1.528-2.942,1.528c-1.253,0-2.266-0.546-3.038-1.634c-0.773-1.092-1.158-2.517-1.158-4.283
+            c0-1.688,0.399-3.075,1.199-4.154c0.798-1.081,1.834-1.622,3.105-1.622c1.908,0,3.042,1.009,3.406,3.024h-5.177
+            C30.268,11.878,30.104,12.768,30.104,13.675"/>
+          </svg>
+
+      </h2>
       <form method="post">
         {{form.hidden_tag()}}
         
