--- a/fetusapp/templates/base.html
+++ b/fetusapp/templates/base.html
@@ -67,13 +67,15 @@
             <button class="btn btn-outline-light" type="submit">Search</button>
           </form>
             {% if current_user.is_admin %}
-            <a class="ms-md-2 custom-link" href="{{url_for('users.signup')}}">
+            <!-- <a class="ms-md-2 custom-link" href="{{url_for('users.signup')}}"> -->
+            <a class="ms-md-2 custom-link" id="mode-toggle" href="#">
               <div class="logged-user-icon">
                 {{ current_user.first_name[0] | upper }}{{ current_user.last_name[0] | upper }}
               </div>
             </a>
             {% else %}
-            <a class="ms-md-2 custom-link" href="{{url_for('users.update_password')}}">
+            <!-- <a class="ms-md-2 custom-link" href="{{url_for('users.update_password')}}"> -->
+              <a class="ms-md-2 custom-link" id="mode-toggle" href="#"></a>
               <div class="logged-user-icon">
                 {{ current_user.first_name[0] | upper }}{{ current_user.last_name[0] | upper }}
               </div>
@@ -105,7 +107,7 @@
             <path d="M10.828.122A.5.5 0 0 1 11 .5V1h.5A1.5 1.5 0 0 1 13 2.5V15h1.5a.5.5 0 0 1 0 1h-13a.5.5 0 0 1 0-1H3V1.5a.5.5 0 0 1 .43-.495l7-1a.5.5 0 0 1 .398.117M11.5 2H11v13h1V2.5a.5.5 0 0 0-.5-.5M4 1.934V15h6V1.077z"/>
           </svg>
         </a>
-        <button id="mode-toggle" class="btn btn-outline-light">wise</button>
+        <!-- <button id="mode-toggle" class="btn btn-outline-light">wise</button> -->
       </small>
       
       {% else %}
