--- a/fetusapp/templates/patients.html
+++ b/fetusapp/templates/patients.html
@@ -10,7 +10,7 @@
     <div class="container mt-5">
         <form action="" method="post" id="findPatient">
             <div class="input-group mb-3">
-                <input type="text" class="form-control" name="search_query" placeholder="Search for a patient" aria-label="Search for a patient" aria-describedby="button-search">
+                <input type="text" class="form-control" name="search_query" placeholder="Search for a patient" aria-label="Search for a patient" aria-describedby="button-search" style="border-start-start-radius: 5rem ; border-end-start-radius: 5rem ;">
                 <button class="btn btn-outline-secondary" type="submit" id="button-search">Search</button>
             </div>
         </form>
