--- a/fetusapp/static/style.css
+++ b/fetusapp/static/style.css
@@ -9,6 +9,7 @@
     --vibrant-pink: #EF539E;          /* Active state color for nav link */
     --vibrant-pink: #ff4f40;          /* monzo*/
     --vibrant-pink: #9FE870;          /* wise*/
+    --vibrant-pink: #EF539E;          /* Active state color for nav link */
     --warm-beige: #F3E1D7;            /* Background color */
     background-color: black;
 }
