--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -86,7 +86,7 @@
                                                 <label for="emailInput" class="form-label">Email</label>
                                                 <input type="email" class="form-control" id="emailInput" value="john.doe@example.com">
                                             </div>
-                                            <button type="button" class="btn btn-outline-secondary" onclick="saveChangesPersonalDetails()">Save</button>
+                                            <button type="button" class="btn login-btn" onclick="saveChangesPersonalDetails()">Save</button>
                                         </form>
                                     </div>
 
@@ -154,7 +154,7 @@
                                                 <label for="emailInput" class="form-label">Email</label>
                                                 <input type="email" class="form-control" id="emailInput" value="john.doe@example.com">
                                             </div>
-                                            <button type="button" class="btn btn-outline-secondary" onclick="saveChangesContactDetails()">Save</button>
+                                            <button type="button" class="btn login-btn" onclick="saveChangesContactDetails()">Save</button>
                                         </form>
                                     </div>
 
