--- a/fetusapp/templates/patient.html
+++ b/fetusapp/templates/patient.html
@@ -78,14 +78,6 @@
 
                                     <div class="editable" id="editableContentPD" style="display: none;">
                                         <form>
-                                            <div class="mb-3">
-                                                <label for="nameInput" class="form-label">Name</label>
-                                                <input type="text" class="form-control" id="nameInput" value="John Doe">
-                                            </div>
-                                            <div class="mb-3">
-                                                <label for="emailInput" class="form-label">Email</label>
-                                                <input type="email" class="form-control" id="emailInput" value="john.doe@example.com">
-                                            </div>
                                             <button type="button" class="btn login-btn" onclick="saveChangesPersonalDetails()">Save</button>
                                         </form>
                                     </div>
@@ -147,11 +139,11 @@
                                     <div class="editable" id="editableContentCD" style="display: none;">
                                         <form>
                                             <div class="mb-3">
-                                                <label for="nameInput" class="form-label">Name</label>
-                                                <input type="text" class="form-control" id="nameInput" value="John Doe">
+                                                <label for="nameInput" class="form-label">Σταθερό Τηλ:</label>
+                                                <input type="text" class="form-control" id="nameInput" value="210xxxxxxx">
                                             </div>
                                             <div class="mb-3">
-                                                <label for="emailInput" class="form-label">Email</label>
+                                                <label for="emailInput" class="form-label">Ε-mail:</label>
                                                 <input type="email" class="form-control" id="emailInput" value="john.doe@example.com">
                                             </div>
                                             <button type="button" class="btn login-btn" onclick="saveChangesContactDetails()">Save</button>
